--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <ul>
         <li class="active"><a href="Home.html"><i class="fa fa-home"></i></i> Home</a></li>
         <li><a href="About.html">About</a></li>
-        <li><a href="#"><i class="fa fa-caret-down" aria-hidden="true"></i> Menu</a>
+        <li><a href="Menu.html"><i class="fa fa-caret-down" aria-hidden="true"></i> Menu</a>
         <div class="sub-menu">
           <ul>
             <li><a href="#">Appetizers</a></li>
@@ -54,8 +54,8 @@
         <li><a href="#"><i class="fa fa-caret-down" aria-hidden="true"></i> Contact</a>
         <div class="sub-menu">
           <ul>
-            <li><a href="#">(225)537-4220</a>
-              <li><a href="#">scoll49@lsu.edu</a>
+            <li><a href="tel:2255374220">(225)537-4220</a>2255374220
+              <li><a href="mailto:scoll49@lsu.edu">scoll49@lsu.edu</a>scoll49@lsu.edu
 
 
           </ul>
@@ -82,16 +82,7 @@
   </header>
   
   
-  
-  <nav>
-   <a href="./Home.html" class="text-center">home</a>
-    <a href="./About.html" target="_blank">About</a>
-    <a href="./Menu.html" target="_blank">Menu</a>
-    <a href="./Contact.html" target="_blank">Contact</a>
-  </nav>
 
-  
-  <img src="IMG_F6186971D57C-1.jpeg" alt="shera">
 
 
     <script src="js/main.js"></script>
